rubocop/examples/bad/style_EmptyLiteral.rb
# TODO: This cop checks for the use of a method,
#   the result of which would be a literal, like an empty array, hash or string.
